feat: Support nonzero shard/realm in yahcli sys commands (#19297)
Signed-off-by: Matt Hess <matt.hess@swirldslabs.com>